# python_beginners_course-main

./: main.py  pyproject.toml
.local/share/virtualenv/wheel/3.10/embed/3/: pip.json  setuptools.json  wheel.json
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-24.0-py3-none-any/pip-24.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.1.0-py3-none-any/setuptools-69.1.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
.local/share/virtualenv/wheel/house/: setuptools-69.1.1-py3-none-any.whl
_06_strings/: _3_string_formatting.py
_07_lists/: lesson.py
_08_indexes_slices/: _1_indexes.py  _2_slices.py
_09_for_loop_range/: _1_for_loop.py  _2_ranges.py
_10_functions/: functions.py
_11_variables_scope/: variables_scope.py
_12_while_loop/: _1_while_loop.py  _2_martingale.py
_13_tuples/: tuple_type.py
_14_dict/: _1_set_and_get.py  _2_iterating.py  _3_comparison.py  _4_merging.py
_15_function_advanced/: _1_args_kwargs.py  _2_return_mutiple_values.py
_16_json/: json_type.py
_17_import/: _1_standard_library.py  _2_imports.py
_18_requests/: _1_request_to_api.py
